lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:10: error: type mismatch;
 found   : Double
 required: Int
  			debut(0)=Liste(i).x
                                          ^Lander:11: error: type mismatch;
 found   : Double
 required: Int
  			debut(1)=Liste(i).y
                                          ^Lander:12: error: type mismatch;
 found   : Double
 required: Int
  			fin(0)=Liste(i+1).x
                                          ^Lander:13: error: type mismatch;
 found   : Double
 required: Int
  			fin(1)=Liste(i+1).y
                                          ^Lander:23: error: value =- is not a member of Int
		sens=-1
                    ^